# compiler

./: CMakeLists.txt
include/: HashTableString.h  LinearAllocator.h  math_funcs.h
src/: HashTableString.c  LinearAllocator.c  main.c  math_funcs.c
